--- a/src/assets/helpers/_variables.scss
+++ b/src/assets/helpers/_variables.scss
@@ -85,8 +85,12 @@ $theme-colors: map-merge(
     "light":      $light,
     "dark":       $dark,
     "coffee":     #2a1a07,
-    "coffee2": #632100,
-    "coffeetext": #ffebae,
+    "coffee2": #421c02,
+    // #632100
+    "coffeetext": #e1c383,
+    // e2bc77
+    // #ffebae
+    // #b89c35
     "beige": #fefbf4,
     "lightgrey" : #bbb,
     "bgtext" : #3a3b3d,
