--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,6 +1,10 @@
 @import "~bootstrap/scss/functions";
 @import "./helpers/variables";
-@import "./helpers/reset";
 @import "~bootstrap/scss/mixins";
-
 @import "bootstrap";
+
+ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
