--- a/src/assets/scss/helpers/_variables.scss
+++ b/src/assets/scss/helpers/_variables.scss
@@ -97,7 +97,8 @@ $theme-colors: map-merge(
     "beige": $cf-beige-Color,
     "lightgrey" : $cf-throughLine-Color,
     "coffee":     #2a1a07,
-    "bgtext" : #3a3b3d,
+    "bgtext": #3a3b3d,
+    "coffeetext2": #632100,
     // #632100
     // #e2bc77
     // #ffebae
